--- a/logs.html
+++ b/logs.html
@@ -31,19 +31,19 @@
         <div class="logs">
             <div class="log">
                 <h3 class="log__title">LOGS</h3>
-                <span class="log__value">10</span>
+                <span class="log__value">{{.LogsCount}}</span>
             </div>
             <div class="log">
                 <h3 class="log__title">PASSWORDS</h3>
-                <span class="log__value">10</span>
+                <span class="log__value">{{.PassCount}}</span>
             </div>
             <div class="log">
                 <h3 class="log__title">STEAM</h3>
-                <span class="log__value">10</span>
+                <span class="log__value">{{.SteamCount}}</span>
             </div>
             <div class="log">
                 <h3 class="log__title">WALLETS</h3>
-                <span class="log__value">10</span>
+                <span class="log__value">{{.WalletCount}}</span>
             </div>
         </div>
         <div class="buttons">
