--- a/converter.html
+++ b/converter.html
@@ -31,11 +31,11 @@
     <form action="post" class="form">
         <label for="insert" class="label">
             INPUT COOKIES
-            <input id="insert" type="text" class="form__input input" placeholder="INSERT COOKIES">
+            <input id="insert" type="text" name="insert" class="form__input input" placeholder="INSERT COOKIES">
         </label>
         <label for="output" class="label">
             OUTPUT COOKIES
-            <input id="output" type="text" class="form__input input" placeholder="GET COOKIES HERE">
+            <input id="output" type="text" name="cookies" class="form__input input" placeholder="GET COOKIES HERE">
         </label>
         <button class="btn form__btn">convert</button>
     </form>
