--- a/user.html
+++ b/user.html
@@ -31,15 +31,15 @@
     <form action="post" class="form">
         <label for="login" class="label">
             USER LOGIN
-            <input id="login" type="text" class="form__input input" placeholder="LOGIN">
+            <input id="login" type="text" name="login" class="form__input input" placeholder="LOGIN">
         </label>
         <label for="password" class="label">
             USER PASSWORD
-            <input id="password" type="password" class="form__input input" placeholder="PASSWORD">
+            <input id="password" type="password" name="password" class="form__input input" placeholder="PASSWORD">
         </label>
         <label for="util" class="label">
-            USER PASSWORD
-            <input id="util" type="text" class="form__input input" placeholder="2024-07-07">
+            UTIL
+            <input id="util" type="text" name="util" class="form__input input" placeholder="2024-07-07">
         </label>
         <button class="btn form__btn">convert</button>
     </form>
